Fix info title, remove flex, add text-align

--- a/style.css
+++ b/style.css
@@ -113,8 +113,7 @@ a:hover {
 }
 
 .info-title {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
